SUBDIRS = config

docsdir   := @docdir@/doc
docs_DATA  = README.md build.md cmdline.md commands.md		\
	     conditions.md distro.md example.md features.md	\
	     index.md initctl.md keventd.md plugins.md		\
	     requirements.md runlevels.md runparts.md		\
	     service.md signals.md state-machine.md		\
	     watchdog.md					\
	     logo.png svc-machine.png svc-machine.svg
EXTRA_DIST = $(docs_DATA)
