SUBDIRS         = config
docsdir        := @docdir@/doc
dist_docs_DATA  = README.md build.md cmdline.md commands.md		\
		  conditions.md distro.md example.md features.md	\
		  index.md initctl.md keventd.md plugins.md		\
		  requirements.md runlevels.md runparts.md		\
		  service.md signals.md state-machine.md		\
		  watchdog.md
dist_docs_DATA += img/logo.png img/svc-machine.png img/svc-machine.svg	\
		  img/alpine-screenshot2.png
