configdocsdir   := @docdir@/doc/config
configdocs_DATA  = README.md cgroups.md env.md files.md index.md	\
		   limitations.md logging.md rescue.md runlevels.md	\
		   runparts.md service-env.md service-opts.md		\
		   service-sync.md service-wrappers.md services.md	\
		   sysv.md task-and-run.md templating.md tty.md
EXTRA_DIST = $(configdocs_DATA)