docsdir        := @docdir@/doc/config
dist_docs_DATA  = cgroups.md env.md files.md index.md limitations.md	\
		  logging.md rescue.md runlevels.md runparts.md 	\
		  service-env.md service-opts.md service-sync.md	\
		  service-wrappers.md services.md sysv.md		\
		  task-and-run.md templating.md tty.md
